2004-12-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmWriter.[h|cxx] : now can write stack of images.
   * vtk/vtkWriteDicom.cxx : can write 2D stack or 3D image

2004-12-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Example/WriteDicomSimple.cxx : example to write a dicom file from nothing.
     At this time, this image isn't readable by e-film... waiting JPR help to
     solve it.

2004-12-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmPixelReadConvert.cxx : bug fix when would forcing load of a
     DocEntry. Now use methods of the Document !

2004-12-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ShowDicomSeq.cxx : bug fix
 
2004-12-08 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmReader.[h|cxx] : bug fix. Plane order isn't inverted
   * vtk/vtkGdcmWriter.[h|cxx] : correctly write images (the Y axis is inverted)
   * Test/ShowDicomSeq.cxx : new test to verify the use of AddFileName method
   * Test/ShowDicom.cxx, TestWriteWithVTK.cxx : set the threshold of regression
     test to 0.0
   * Test/TestCopyRescaleDicom.cxx : remove unused variable
   * Test/CMakeLists.txt : add the creation of the gdcmDataSeqImages.h file
     containing found sequences

2004-12-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ShowDicom.cxx, TestWriteWithVTK.cxx : bug fix, now this test pass
     not at all time
   * Test/TestCopyRescaleDicom.cxx : rearrange the test to correctly pass...
     Some fields in BinEntry must be copied to not seg fault when making the :
              gdcm::File *copy     = new gdcm::File( copyH );
     and tests are now made on good variables

2004-12-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmWriter.[h|cxx] : add a first version of vtkGdcmWriter
   * src/gdcmValEntry.cxx : bug fix when setting the value. Problems of odd
     length
   * src/gdcmHeader.cxx : Remove a useless call to Util::DicomString